# MigrationCoboltoModern

./: .gitignore  README.md
.github/workflows/: payment-integration.yml  payment-message-processing.yml  payment-processing-core.yml
payment-integration/: README.md  pyproject.toml
payment-integration/src/payment_integration/: __init__.py  harness.py
payment-integration/tests/: test_integration.py  test_processing_integration.py
payment-message-processing/: README.md  pyproject.toml
payment-message-processing/src/payment_message_processing/: __init__.py  config.py  controller.py  customer.py  dto.py  http_app.py  parser.py  processing.py  processing_controller.py
payment-message-processing/tests/: test_processing.py  test_service.py
payment-processing-core/: README.md  pyproject.toml
payment-processing-core/src/payment_processing_core/: __init__.py  config.py  errors.py  fraud.py  iso8583.py  log_engine.py  models.py  processing.py  repository.py  validator.py
payment-processing-core/tests/: test_processing.py  test_transaction_validator.py
prompts/: 01-implement-process-and-validate-a-financial-transaction-with.md  02-implement-process-and-validate-a-financial-transaction-with.md  03-integrate-services-for-process-and-validate-a-financial-tran.md  04-implement-process-a-financial-transaction-with-validation-fe.md  05-implement-process-a-financial-transaction-with-validation-fe.md  06-integrate-services-for-process-a-financial-transaction-with.md
services/: data-initialization.md  payment-message-processing.md  payment-processing-core.md
